Fix Advanced Color Selector hsySH square element

The signal parameters were passed in incorrect order.

BUG:452422